# grodecoder

./: .gitignore  Module_GroDecoder.py  README.md  environment.yml  fasta_seq_into_PDBID.py  grodecoder.py  mol_def.py  pyproject.toml  search_into_PDB.py  streamlit_app.py  test_grodecoder.py  v2.py
data/databases/: lipid_CHARMM_GUI_CSML.csv
data/examples/: 4MQJ_ABCD.gro  DNA_start_nowat.gro  M1.gro  README.md  RNA_start_nowat.gro  noriega_AA_CRD_3CAL.gro  noriega_CG_CRD_3CAL.gro
grodecoder/: __init__.py  cli.py  databases.py  main.py  mol_def.py  typing.py
grodecoder/data/databases/: molecule_definitions.json
grodecoder/data/examples/: 1QJ8_solution.gro  5MBA.gro
results/: barstar_withoutH.gro
scr/grodecoder/: __init__.py
scripts/: mol_def_to_json.py  streamlit_app.py
src/grodecoder/: grodecoder.py  mol_def.py  search_into_PDB.py
tests/: test_grodecoder.py  test_unit_grodecoder.py
tests/data/: 1BRS.json  1QJ8_PACKMOL.json  1QJ8_membrane.json  1QJ8_solution.json  2MAT.json  3CAL_AA.json  3CAL_CG.json  4MQJ_ABCD.json  4ZRY.json  5MBA.json  5ZOA.json  DMPC_PI.json  DNA_start.json  OMPX_DMPC_step5_input.json  RNA_start.json  barstar.json  fake_hydrogen.gro  find_ion_CLA.gro  get_formula_CHL1.gro  get_formula_DOPC.gro  get_formula_POPP2.gro  get_formula_waterTIP3.gro  noriega_AA.json  noriega_CG.json  opls4_stripped.json  step7_1.json  test_guess_resolution_AA.gro  test_guess_resolution_CG.gro
