[project]
name = "grodecoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "loguru>=0.7.3",
    "mdanalysis>=2.9.0",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "streamlit>=1.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
